--- a/scratch-dataviewer/index.html
+++ b/scratch-dataviewer/index.html
@@ -3,18 +3,22 @@
 <head>
   <meta charset="utf-8">
   <title>Redirecting to https://playdatalab.github.io/editor/</title>
+  <noscript>
+    <meta http-equiv="refresh" content="0; URL=https://playdatalab.github.io/editor/">
+    <link rel="canonical" href="https://playdatalab.github.io/editor/">
+  </noscript>  
   <script>
-      window.onload = function () {
-          const destination = window.location.href;
-          if (window.location.href.includes("jaafreitas.github.io/scratch-dataviewer")) {
-              const redirectLocation = window.location.href.replace(
-                  "jaafreitas.github.io/scratch-dataviewer",
-                  "playdatalab.github.io/editor"
-              );
-              document.getElementById("body").innerHTML = "Redirecting to " + redirectLocation + " ...";
-              window.location.href = redirectLocation;
-          }
+    window.onload = function () {
+      const destination = window.location.href;
+      if (window.location.href.includes("jaafreitas.github.io/scratch-dataviewer")) {
+        const redirectLocation = window.location.href.replace(
+          "jaafreitas.github.io/scratch-dataviewer",
+          "playdatalab.github.io/editor"
+        );
+        document.getElementById("body").innerHTML = "Redirecting to " + redirectLocation + " ...";
+        window.location.href = redirectLocation;
       }
+    }
   </script>
 </head>
 <body id="body" style="text-align: center" />
