--- a/404.html
+++ b/404.html
@@ -2,20 +2,21 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Redirecting to https://playdatalab.github.io/editor/</title>
+  <title>Error 404</title>
   <script>
-      window.onload = function () {
-          const destination = window.location.href;
-          if (window.location.href.includes("jaafreitas.github.io/scratch-dataviewer")) {
-              const redirectLocation = window.location.href.replace(
-                  "jaafreitas.github.io/scratch-dataviewer",
-                  "playdatalab.github.io/editor"
-              );
-              document.getElementById("body").innerHTML = "Redirecting to " + redirectLocation + " ...";
-              window.location.href = redirectLocation;
-          }
+    window.onload = function () {
+      const destination = window.location.href;
+      if (window.location.href.includes("jaafreitas.github.io/scratch-dataviewer")) {
+        const redirectLocation = window.location.href.replace(
+          "jaafreitas.github.io/scratch-dataviewer",
+          "playdatalab.github.io/editor"
+        );
+        document.getElementById("body").innerHTML = "Redirecting to " + redirectLocation + " ...";
+        window.location.href = redirectLocation;
       }
+    }
   </script>
 </head>
 <body id="body" style="text-align: center" />
+  Page not found
 </html>
